style: remove overflow-y hidden on body to fix position sticky

--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ body {
     color: var(--text-color);
     font-family: var(--font-main);
     overflow-x: hidden;
-    overflow-y: hidden;
     -webkit-font-smoothing: antialiased;
     position: relative;
 }
